src/objects/ints__TUCR_Banking__c.object
<CustomObject>
    <fields>
        <fullName>ints__AccountDesignator__c</fullName>
        <label>Account Designator</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__DateClosed__c</fullName>
        <label>Date Closed</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__DateOpened__c</fullName>
        <label>Date Opened</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__DateVerified__c</fullName>
        <label>Date Verified</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__IndustryCode__c</fullName>
        <label>Industry Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Narrative__c</fullName>
        <label>Narrative</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__SubscriberCode__c</fullName>
        <label>Subscriber Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__SubscriberName__c</fullName>
        <label>Subscriber Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__TransUnion_Credit_Report__c</fullName>
        <label>TransUnion Credit Report</label>
        <referenceTo>ints__TransUnion_Credit_Report__c</referenceTo>
        <relationshipLabel>TUCR Bankings</relationshipLabel>
        <relationshipName>TUCR_Bankings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__TypeAccount__c</fullName>
        <label>Type Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>TUCR Banking</label>
    <nameField>
        <displayFormat>TUCR_BI-{000000000}</displayFormat>
        <label>TUCR Banking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TUCR Bankings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>